Refatora e melhora a manutenibilidade do código.
Moderniza o uso de fluxos e aprimora a estrutura de testes para melhor legibilidade e manutenção.

Remove código de depuração e anotações desnecessárias, melhorando a qualidade geral do código.