@@ -9,6 +9,7 @@ import com.fiap.snackapp.core.domain.model.OrderDefinition;
 import jakarta.persistence.EntityManager;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
@@ -36,8 +37,7 @@ class OrderPersistenceAdapterIntegrationTest {
     private OrderRepositoryPort orderRepositoryPort;
 
     private Long orderIniciadoId;
-    private Long orderRecebidoId;
-    private Long orderProntoId;
+    private Long orderConcluidoId;
 
     @BeforeEach
     void setUp() {
@@ -47,6 +47,7 @@ class OrderPersistenceAdapterIntegrationTest {
         jpaRepository.flush();
         entityManager.clear();
 
+        // Criação de cenários de teste
         var o1 = new OrderEntity();
         o1.setStatus(OrderStatus.INICIADO);
         o1.setCustomer(null);
@@ -64,67 +65,115 @@ class OrderPersistenceAdapterIntegrationTest {
 
         var saved = jpaRepository.saveAllAndFlush(List.of(o1, o2, o3));
 
+        // Apenas guardamos os IDs que serão explicitamente usados nos testes
         orderIniciadoId = saved.get(0).getId();
-        orderRecebidoId = saved.get(1).getId();
-        orderProntoId = saved.get(2).getId();
+        orderConcluidoId = saved.get(2).getId();
     }
 
-    @Test
-    @DisplayName("save: deve persistir pedido novo e retornar com id")
-    void save_ShouldPersistNewOrder() {
-        var domain = new OrderDefinition(null, null, OrderStatus.INICIADO, new ArrayList<>());
+    @Nested
+    @DisplayName("save")
+    class SaveTests {
+        @Test
+        @DisplayName("deve persistir pedido novo e retornar com id")
+        void shouldPersistNewOrder() {
+            var domain = new OrderDefinition(null, null, OrderStatus.INICIADO, new ArrayList<>());
 
-        var saved = orderRepositoryPort.save(domain);
+            var saved = orderRepositoryPort.save(domain);
 
-        assertThat(saved).isNotNull();
-        assertThat(saved.getId()).isNotNull();
-        assertThat(saved.getStatus()).isEqualTo(OrderStatus.INICIADO);
-        assertThat(saved.getItems()).isEmpty();
-        assertThat(saved.getCustomer()).isNull();
+            assertThat(saved).isNotNull();
+            assertThat(saved.getId()).isNotNull();
+            assertThat(saved.getStatus()).isEqualTo(OrderStatus.INICIADO);
+            assertThat(saved.getItems()).isEmpty();
+            assertThat(saved.getCustomer()).isNull();
+        }
     }
 
-    @Test
-    @DisplayName("findById: deve retornar pedido existente")
-    void findById_ShouldReturnExistingOrder() {
-        var result = orderRepositoryPort.findById(orderRecebidoId);
+    @Nested
+    @DisplayName("findById")
+    class FindByIdTests {
+        @Test
+        @DisplayName("deve retornar pedido existente (INICIADO)")
+        void shouldReturnExistingOrder() {
+            var result = orderRepositoryPort.findById(orderIniciadoId);
 
-        assertThat(result).isPresent();
-        assertThat(result.get().getId()).isEqualTo(orderRecebidoId);
-        assertThat(result.get().getStatus()).isEqualTo(OrderStatus.PAGAMENTO_PENDENTE);
+            assertThat(result).isPresent();
+            assertThat(result.get().getId()).isEqualTo(orderIniciadoId);
+            assertThat(result.get().getStatus()).isEqualTo(OrderStatus.INICIADO);
+        }
+
+        @Test
+        @DisplayName("deve retornar pedido concluído por ID")
+        void shouldReturnConcluidoOrder() {
+            var result = orderRepositoryPort.findById(orderConcluidoId);
+
+            assertThat(result).isPresent();
+            assertThat(result.get().getId()).isEqualTo(orderConcluidoId);
+            assertThat(result.get().getStatus()).isEqualTo(OrderStatus.CONCLUIDO);
+        }
+
+        @Test
+        @DisplayName("deve retornar vazio para id inexistente")
+        void shouldReturnEmpty() {
+            assertThat(orderRepositoryPort.findById(999999L)).isEmpty();
+        }
     }
 
-    @Test
-    @DisplayName("findById: deve retornar vazio para id inexistente")
-    void findById_ShouldReturnEmpty() {
-        assertThat(orderRepositoryPort.findById(999999L)).isEmpty();
-    }
+    @Nested
+    @DisplayName("findByFilters")
+    class FindByFiltersTests {
 
-    @Test
-    @DisplayName("findByFilters: deve filtrar por 1 status")
-    void findByFilters_ShouldFilterBySingleStatus() {
-        var result = orderRepositoryPort.findByFilters(List.of(OrderStatus.INICIADO));
+        @Test
+        @DisplayName("filtro: 1 status (INICIADO)")
+        void shouldFilterBySingleStatus() {
+            var result = orderRepositoryPort.findByFilters(List.of(OrderStatus.INICIADO));
 
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(orderIniciadoId);
-        assertThat(result.get(0).getStatus()).isEqualTo(OrderStatus.INICIADO);
-    }
+            assertThat(result).hasSize(1);
+            assertThat(result.getFirst().getId()).isEqualTo(orderIniciadoId);
+            assertThat(result.getFirst().getStatus()).isEqualTo(OrderStatus.INICIADO);
+        }
 
-    @Test
-    @DisplayName("findByFilters: deve filtrar por lista de status")
-    void findByFilters_ShouldFilterByMultipleStatus() {
-        var result = orderRepositoryPort.findByFilters(List.of(OrderStatus.INICIADO, OrderStatus.CONCLUIDO));
+        @Test
+        @DisplayName("filtro: múltiplos status (INICIADO e CONCLUIDO)")
+        void shouldFilterByMultipleStatus() {
+            var result = orderRepositoryPort.findByFilters(List.of(OrderStatus.INICIADO, OrderStatus.CONCLUIDO));
 
-        assertThat(result).hasSize(2);
-        assertThat(result).allMatch(o ->
-                o.getStatus() == OrderStatus.INICIADO || o.getStatus() == OrderStatus.CONCLUIDO
-        );
-    }
+            assertThat(result).hasSize(2);
+            assertThat(result).extracting(OrderDefinition::getStatus)
+                    .containsExactlyInAnyOrder(OrderStatus.INICIADO, OrderStatus.CONCLUIDO);
+        }
 
-    @Test
-    @DisplayName("findByFilters: null deve retornar tudo (se o Specification tratar assim)")
-    void findByFilters_NullShouldReturnAll() {
-        var result = orderRepositoryPort.findByFilters(null);
+        @Test
+        @DisplayName("filtro: todos os status (INICIADO, PENDENTE, CONCLUIDO)")
+        void shouldFilterByAllStatus() {
+            var result = orderRepositoryPort.findByFilters(
+                    List.of(OrderStatus.INICIADO, OrderStatus.PAGAMENTO_PENDENTE, OrderStatus.CONCLUIDO)
+            );
 
-        assertThat(result).hasSize(3);
+            assertThat(result).hasSize(3);
+        }
+
+        @Test
+        @DisplayName("filtro: null deve retornar todos")
+        void shouldReturnAllWhenNullFilter() {
+            var result = orderRepositoryPort.findByFilters(null);
+
+            assertThat(result).hasSize(3);
+        }
+
+        @Test
+        @DisplayName("filtro: lista vazia retorna nada")
+        void shouldReturnEmptyWhenEmptyFilter() {
+            var result = orderRepositoryPort.findByFilters(List.of());
+
+            assertThat(result).isEmpty();
+        }
+
+        @Test
+        @DisplayName("filtro: status que não existe retorna vazio")
+        void shouldReturnEmptyWhenStatusNotFound() {
+            var result = orderRepositoryPort.findByFilters(List.of(OrderStatus.PAGAMENTO_APROVADO));
+
+            assertThat(result).isEmpty();
+        }
     }
 }
